--- a/style.css
+++ b/style.css
@@ -1,5 +1,12 @@
 body {
   margin: 0;
+  background-color: #eeeff4;
+  min-width: 60vh;
+}
+
+.content {
+  max-width: 1000px;
+  margin: auto;
   background-color: #40434e;
 }
 
@@ -49,23 +56,114 @@ h3 {
 
 header {
   display: flex;
-  justify-content: flex-end;
+  justify-content: space-between;
   background-color: #9faf90;
   height: 6em;
   display: relative;
-  padding-right: 1em;
+  padding-right: 2vh;
+  padding-top: 1vh;
+  padding-left: 2vh;
 }
 
 .top-container {
   position: relative;
   text-align: right;
-  margin-top: 1em;
-  margin-right: 1em;
+  margin-top: 1vh;
+  margin-right: 2vh;
   height: fit-content;
 }
 
+#alex {
+  font-size: 7em;
+}
+
+.foto {
+  position: relative;
+  display: block;
+  left: 0;
+  height: 18.7vh;
+  margin-top: 1.6vh;
+  border-radius: 2px;
+  border: #ff570a solid 2px;
+}
+
 .portfolio {
-  position: absolute;
+  position: relative;
   text-align: left;
-  margin-left: 1em;
+  margin-top: 5vh;
+  margin-left: 2vh;
+  margin-bottom: 5vh;
+  border: #c6d4ff solid 1px;
+  border-radius: 2px;
+  width: fit-content;
+  padding: 1vh;
+}
+
+.topics-all {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+}
+
+.topic {
+  background-color: #9faf90;
+  color: #40434e;
+  position: relative;
+  padding-left: 2vh;
+  height: fit-content;
+  font-size: 24pt;
+  padding-top: 1vh;
+  padding-bottom: 1vh;
+  display: flex;
+}
+
+.topic:hover {
+  width: auto;
+  height: fit-content;
+  border: #ff570a solid 1px;
+}
+
+.topic:hover .topic-work {
+  display: block;
+}
+.topic-work {
+  display: none;
+  font-size: 20pt;
+  transition: all 4s;
+}
+
+.topic:hover .topic-education {
+  display: block;
+}
+.topic-education {
+  display: none;
+  font-size: 20pt;
+  transition: all 4s;
+}
+
+.topic:hover .topic-millitary {
+  display: block;
+}
+.topic-millitary {
+  display: none;
+  font-size: 20pt;
+  transition: all 4s;
+}
+
+.topic:hover .topic-hobbies {
+  display: block;
+}
+.topic-hobbies {
+  display: none;
+  font-size: 20pt;
+  transition: all 4s;
+}
+
+.topic:hover .topic-contact {
+  display: block;
+}
+.topic-contact {
+  display: none;
+  font-size: 20pt;
+  transition: all 4s;
 }
