--- a/style.css
+++ b/style.css
@@ -8,6 +8,8 @@ body {
   max-width: 1000px;
   margin: auto;
   background-color: #40434e;
+  padding-bottom: 2vh;
+  min-height: 100vh;
 }
 
 h1 {
@@ -103,18 +105,65 @@ header {
   display: flex;
   flex-direction: row;
   justify-content: space-between;
+  margin-left: 2vh;
+  margin-right: 2vh;
+  align-content: center;
 }
 
-.topic {
+.topic1 {
   background-color: #9faf90;
   color: #40434e;
   position: relative;
-  padding-left: 2vh;
   height: fit-content;
   font-size: 24pt;
   padding-top: 1vh;
+  padding-left: 1vh;
+  padding-right: 1vh;
   padding-bottom: 1vh;
-  display: flex;
+}
+.topic2 {
+  background-color: #9faf90;
+  color: #40434e;
+  position: relative;
+  height: fit-content;
+  font-size: 24pt;
+  padding-top: 1vh;
+  padding-left: 1vh;
+  padding-right: 1vh;
+  padding-bottom: 1vh;
+}
+.topic3 {
+  background-color: #9faf90;
+  color: #40434e;
+  position: relative;
+  height: fit-content;
+  font-size: 24pt;
+  padding-top: 1vh;
+  padding-left: 1vh;
+  padding-right: 1vh;
+  padding-bottom: 1vh;
+}
+.topic4 {
+  background-color: #9faf90;
+  color: #40434e;
+  position: relative;
+  height: fit-content;
+  font-size: 24pt;
+  padding-top: 1vh;
+  padding-left: 1vh;
+  padding-right: 1vh;
+  padding-bottom: 1vh;
+}
+.topic5 {
+  background-color: #9faf90;
+  color: #40434e;
+  position: relative;
+  height: fit-content;
+  font-size: 24pt;
+  padding-top: 1vh;
+  padding-left: 1vh;
+  padding-right: 1vh;
+  padding-bottom: 1vh;
 }
 
 .topic:hover {
@@ -123,47 +172,67 @@ header {
   border: #ff570a solid 1px;
 }
 
-.topic:hover .topic-work {
+.output-text {
+  position: relative;
+  margin-top: 1vh;
+  margin-left: 2vh;
+  margin-right: 2vh;
+  background-color: #9faf90;
   display: block;
 }
+
 .topic-work {
-  display: none;
+  position: absolute;
   font-size: 20pt;
-  transition: all 4s;
+  background-color: #9faf90;
+  display: none;
 }
 
-.topic:hover .topic-education {
-  display: block;
-}
 .topic-education {
-  display: none;
+  position: absolute;
   font-size: 20pt;
-  transition: all 4s;
+  background-color: #9faf90;
+  display: none;
 }
 
-.topic:hover .topic-millitary {
-  display: block;
-}
 .topic-millitary {
-  display: none;
+  position: absolute;
   font-size: 20pt;
-  transition: all 4s;
+  background-color: #9faf90;
+  display: none;
 }
 
-.topic:hover .topic-hobbies {
-  display: block;
-}
 .topic-hobbies {
-  display: none;
+  position: absolute;
   font-size: 20pt;
-  transition: all 4s;
-}
-
-.topic:hover .topic-contact {
-  display: block;
+  background-color: #9faf90;
+  display: none;
 }
 .topic-contact {
-  display: none;
+  position: absolute;
+  right: 0;
   font-size: 20pt;
-  transition: all 4s;
+  background-color: #9faf90;
+  opacity: 0;
+}
+
+.topic1:hover {
+  border: #ff570a solid 2px;
+}
+.topic2:hover {
+  border: #ff570a solid 2px;
+}
+.topic3:hover {
+  border: #ff570a solid 2px;
+}
+.topic4:hover {
+  border: #ff570a solid 2px;
+}
+.topic5:hover {
+  border: #ff570a solid 2px;
+}
+
+.topic-contact:hover {
+  opacity: 1;
+  border: #ff570a solid 2px;
 }
